

umx 1.1.0
--------------

* umxRAM can take existing model as input (very useful)
* umxRAM reports model fit and comparison (if old model exists)
* umxPath now lbounds var@0 for v.m.
* Enhanced umx_residualize to take multiple DVs
* Enhanced umxMI to cope with more situations
* Improvements to summaryAPA to handle data as well as lm
* Much enhanced help for twin functions
* Various new function features
* Add vcov() S3 fn
* Improved umx_print handling of 0-row input
* summary helpers  (e.g. umx_fun_mean_sd)
* Begin support for sex-lim twin models
* New data file for sex-limitation
* Improving consistency in parameter names (minor backward incompatibility)
* Replacing @ with $ accessor begun

umx 1.0.0
--------------

* Full support (create, plot, summary) for CP twin models!
* Full support (create, plot, summary) for IP twin models!
* Full support (create, plot, summary) for GxE twin models!
* Fixed limitation in umxPath where "to" was not being set.
* Add support for circles as well as lines for residualvariance
* Improve help text. Thanks Mike Neale esp.!
* Improved organization of functions into @families in the help.
* Improved example for umx_lower2full()
* Dropped umxRAM functionality to set endogenous, exogenous, and latent traits
* Dropped a dozen deprecated functions.

umx 0.50.0
--------------

* First CRAN release

umx 0.49.0
--------------

* Ensuring edge cases work
* Improving help files and feedback
* rationalizing fn names into @families

umx 0.45-beta
--------------

* Feature complete
* Bug squashing
* Optimizing fn names for memorability and typing

umx 0.40-beta
--------------

* Beta level!
* Standard confint(); plot() etc functions implemented
* Adding umxRAM() and umxPath shortcuts

umx 0.30-alpha
--------------

* Alpha release
* 90% feature complete
* lots of name rationalization

umx 0.25-alpha
--------------

* Alpha release
* 80% feature complete
* Function prefix reflects usage:: umxMajor, umx_utility_function, xmuNotForUser