@@ -8,11 +8,12 @@ umx 1.1.0
 * umxPath now lbounds var@0 for v.m.
 * Enhanced umx_residualize to take multiple DVs
 * Enhanced umxMI to cope with more situations
+* Improved resilience of summary to missing CIs (ht Nathan Gillespie!)
 * Improvements to summaryAPA to handle data as well as lm
-* Much enhanced help for twin functions
+* Improved help for twin functions
 * Various new function features
 * Add vcov() S3 fn
-* Improved umx_print handling of 0-row input
+* umx_print resilient to 0-row input
 * summary helpers  (e.g. umx_fun_mean_sd)
 * Begin support for sex-lim twin models
 * New data file for sex-limitation
